--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -78,8 +78,11 @@
                     <RatingBar
                         android:id="@+id/ratingbar_detailed_rating"
                         style = "?android:attr/ratingBarStyleSmall"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:isIndicator="true"
+                        android:stepSize="0.1"
                         android:numStars="10"/>
                     <Button
                         android:id="@+id/btn_detailed_addfavorite"
